--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -r git@github.com:qiemingyun/qiemingyun.github.io.git -b main"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +59,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.33",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "^17.0.10"
+    "@types/react-dom": "^17.0.10",
+    "gh-pages": "^3.2.3"
   }
 }
